--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                 <div class="left-side">
                     <ul class="d-flex align-items-center justify-content-between ">
                         <li class="me-5">
-                            <a href="" class="text-light">+2349115789479</a>
+                            <a href="" class="a-hover">+2349115789479</a>
                         </li>
 
                         <li>
-                            <a href="" class="text-light">info@aishatakindele.com</a>
+                            <a href="" class="a-hover">info@aishatakindele.com</a>
                         </li>
                     </ul>
                 </div>
@@ -29,13 +29,13 @@
                 <div class="right-side">
                     <ul class="d-flex justify-content-between align-items-center">
                         <li class="me-5">
-                            <a href="" class="text-light">Login</a>
+                            <a href="" class="a-hover">Login</a>
                         </li>
                         <li class="me-5">
-                            <a href="" class="text-light">Wishlist</a>
+                            <a href="" class="a-hover">Wishlist</a>
                         </li>
                         <li class="me-5">
-                            <a href="" class="text-light">My Account</a>
+                            <a href="" class="a-hover">My Account</a>
                         </li>
                     </ul>
                 </div>
