--- a/index.html
+++ b/index.html
@@ -43,6 +43,39 @@
 
         </div>
     </section>
+
+    <section class="nav-section">
+        <div class="container">
+            <div class="upper-nav">
+
+            </div>
+            <div class="lower-nav">
+                <ul class="d-flex justify-content-between align-items-center">
+                    <li class="me-5">
+                        <a href="">Home</a>
+                    </li>
+                    <li class="me-5">
+                        <a href="">About us</a>
+                    </li>
+                    <li class="me-5">
+                        <a href="">Pages</a>
+                    </li>
+                    <li class="me-5">
+                        <a href="">Shop</a>
+                    </li>
+                    <li class="me-5">
+                        <a href="">Blogs</a>
+                    </li>
+                    <li class="me-5">
+                        <a href="">Contact</a>
+                    </li>
+
+                </ul>
+
+            </div>
+        </div>
+
+    </section>
 </body>
 
 </html>
