--- a/index.html
+++ b/index.html
@@ -47,27 +47,29 @@
     <section class="nav-section">
         <div class="container">
             <div class="upper-nav">
-
+                <img src="img - Copy/logo.png" alt="">
             </div>
+            <input placeholder="search product" type="text">
+            <button>search</button>
             <div class="lower-nav">
-                <ul class="d-flex justify-content-between align-items-center">
+                <ul class="d-flex">
                     <li class="me-5">
-                        <a href="">Home</a>
+                        <a href="index.html" class="text-mine">Home</a>
                     </li>
                     <li class="me-5">
-                        <a href="">About us</a>
+                        <a href="about.html" class="text-mine">About us</a>
                     </li>
                     <li class="me-5">
-                        <a href="">Pages</a>
+                        <a href="" class="text-mine">Pages</a>
                     </li>
                     <li class="me-5">
-                        <a href="">Shop</a>
+                        <a href="" class="text-mine">Shop</a>
                     </li>
                     <li class="me-5">
-                        <a href="">Blogs</a>
+                        <a href="" class="text-mine">Blogs</a>
                     </li>
                     <li class="me-5">
-                        <a href="">Contact</a>
+                        <a href="" class="text-mine">Contact</a>
                     </li>
 
                 </ul>
@@ -76,6 +78,7 @@
         </div>
 
     </section>
+    <script src="js/bootstrap.js"></script>
 </body>
 
 </html>
