--- a/index.html
+++ b/index.html
@@ -46,11 +46,18 @@
 
     <section class="nav-section">
         <div class="container">
-            <div class="upper-nav">
-                <img src="img - Copy/logo.png" alt="">
+            <div class="upper-nav d-flex justify-content-between align-items-center">
+                <img src="img/logo.png" alt="">
+                <div class="d-flex">
+                    <input placeholder="search product..." type="text" class="form-control py-3 input-width">
+                    <button>Search</button>
+                </div>
+
+                <div>
+                    <img src="img/cart-icon-1.png" alt="">
+                </div>
             </div>
-            <input placeholder="search product" type="text">
-            <button>search</button>
+
             <div class="lower-nav">
                 <ul class="d-flex">
                     <li class="me-5">
